Fixed cards overlapping

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -144,24 +144,25 @@ footer {
 }
 
 /* Project Page */
-/* Cards */
-.cards-container {
-  width: 100%;
-  height: 100%;
+.projects {
+  max-width: 100%;
+  max-height: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  justify-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(310px, 1fr));
   column-gap: 9vw;
   row-gap: 9vw;
 }
 
+/* Cards */
 .card {
   font-size: 18px;
-  width: fit-content;
-  height: fit-content;
+  height: auto;
+  min-width: 310px;
+  max-width: 600px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   transition-duration: 150ms;
   transition-timing-function: ease-in;
+  justify-self: center;
 }
 
 .card:hover {
@@ -170,7 +171,7 @@ footer {
 }
 
 .card-image {
-  width: 400px;
+  max-width: 100%;
   display: block;
   filter: grayscale(80%);
 }
@@ -178,28 +179,37 @@ footer {
 .card-text {
   background-color: #f2f0e6;
   padding: 16px 24px;
-  max-width: 400px;
+  max-width: 100%;
+  height: 110px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+
+  .card-header {
+    display: flex;
+    justify-content: space-between;
+
+    .card-title {
+      font-size: 18px;
+    }
+
+    .card-type {
+      font-size: 18px;
+    }
+  }
 
   p {
     font-size: 16px;
   }
 }
 
-.card-header {
-  display: flex;
-  justify-content: space-between;
-}
-
-.card-title {
-  font-size: 18px;
-}
-
-.card-type {
-  font-size: 18px;
-}
-
 .card-buttons {
   display: flex;
+  max-width: 100%;
+
+  a {
+    width: 100%;
+  }
 
   span {
     font-size: 18px;
@@ -225,7 +235,7 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  max-width: 100%;
   padding: 23px 30px;
   column-gap: 10px;
 }
